--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 
 	</head>
 	<body>
+		<audio controls autoplay>
+  <source src="https://zingmp3.vn/embed/song/ZW6A796B?start=false" type="audio/ogg">
+</audio>
 	<div class="fh5co-loader"></div>
 
 	<aside id="fh5co-aside" role="sidebar" class="text-center" style="background-image: url(images/img_bg_1_gradient.jpg);">
