--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
 	</head>
 	<body>
-		<audio controls autoplay>
-  <source src="https://zingmp3.vn/embed/song/ZW6A796B?start=false" type="audio/ogg">
+		<audio controls autoplay hidden>
+  <source src="mynd.mp3" type="audio/mpeg">
 </audio>
 	<div class="fh5co-loader"></div>
 
