--- a/index.html
+++ b/index.html
@@ -1,21 +1,11 @@
 <!DOCTYPE HTML>
+
 <html>
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>TP ♥ NT</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
 	
@@ -45,21 +35,18 @@
 			days: 'Year',
 			hours: 'Month',
 			minutes: 'Day',
-			pluralLetter: 's'
+			pluralLetter: 's'	
         }
 	</script>
 
 	</head>
 	<body>
-		<audio controls autoplay hidden>
-  <source src="mynd.mp3" type="audio/mpeg">
-</audio>
 	<div class="fh5co-loader"></div>
 
 	<aside id="fh5co-aside" role="sidebar" class="text-center" style="background-image: url(images/img_bg_1_gradient.jpg);">
 		<h1 id="fh5co-logo"><a>Thành Phát ♥ Ngọc Trân</a></h1>
 	</aside>
-
+	
 	<div id="fh5co-main-content">
 		<div class="dt js-dt">
 			<div class="dtc js-dtc">
@@ -72,6 +59,9 @@
 								<div class="fh5co-intro animate-box">
 									<h2>-------</h2>
 									<p>Today is <span id="nuitime"></span></p>
+										<audio controls autoplay>
+								<source src="mynd.mp3" type="audio/mpeg">
+									</audio>
 								</div>
 							</div>
 							
@@ -123,7 +113,7 @@ function getFormattedDate() {
     min = (min < 10 ? "0" : "") + min;
     sec = (sec < 10 ? "0" : "") + sec;
 
-    var str = day+"/"+month+"/"+date.getFullYear()+", "+hour + ":" + min;
+    var str = day+"/"+month+"/"+date.getFullYear()+", "+hour + ":" + min +":" + sec;
 
     return str;
 }
